# rustlearn

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
src/: app.rs  config.rs  lib.rs  logger.rs  main.rs  mocks.rs
src/database/: cache.rs  connection.rs  mod.rs
src/database/category/: model.rs
src/database/session/: model.rs
src/database/user/: model.rs  repository.rs
src/router/: auth.rs  user.rs
src/server/: mod.rs
src/server/api/: mod.rs
src/server/extractors/: required_authentication_extractor.rs  validation_extractor.rs
src/server/services/: category_services.rs  mod.rs  session_services.rs  user_services.rs
src/server/utils/: argon_utils.rs  http_utils.rs  jwt_utils.rs  mod.rs
tests/: users_service_signin_user_should.rs  users_service_signup_user_should.rs
