[package]
name = "system_test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
http = "1.0.0"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
tokio = {version = "1.36.0", features = ["full"]}
tower-http = {version = "0.5.1", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
